--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Project Boilerplate</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="dist/main.css" />
-    <script src="dist/main.js" type="module"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvvYBdmtMYJaC9COhXmq5XcqeTc4DO9M"
+  type="text/javascript"></script>
+    <script async defer src="dist/main.js" type="module"></script>
 </head>
 <body>
-    
+    <div id="map"></div>
 </body>
 </html>
